k8s/apps/walnuts.dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walnuts.dev
  labels:
    app: walnuts.dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walnuts.dev
  template:
    metadata:
      labels:
        app: walnuts.dev
    spec:
      containers:
        - name: walnuts.dev
          image: ghcr.io/walnuts1018/walnuts.dev:f0e4b249cd07b1c0ffaea67441374b14f7bb22c1-4 # {"$imagepolicy": "flux-system:walnuts.dev-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits: {}
            requests: {}
