k8s/apps/walnuts.dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: walnuts.dev
  labels:
    app: walnuts.dev
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: walnuts.dev
  type: ClusterIP
