k8s/apps/walnuts.dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walnuts.dev
spec:
  ingressClassName: "nginx"
  rules:
    - host: "walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: walnuts.dev
                port:
                  number: 3000
